--- a/style.css
+++ b/style.css
@@ -7,3 +7,102 @@ font-family: 'Mulish', sans-serif;
 */
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.css");
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    width: 100%;
+    height:100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: zoom 25s;
+}
+
+@keyframes zoom {
+    0% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.banner {
+    position: absolute;
+    top: 30%;
+    left: 15%;
+}
+
+.banner h1 {
+    width: 80%;
+    color: white;
+    line-height: 3.5rem;
+    font-size: 3.5rem;
+    font-family: 'Baloo 2', cursive;
+    font-weight: 300;
+    text-shadow: .2rem .3rem 2px rgba(0, 0, 0, .4);
+    margin-bottom: 2rem;
+    animation: moveBanner 1s  forwards;
+    opacity: 0;
+}
+
+.banner p {
+    font-family: 'Josefin Slab', serif;
+    color: white;
+    font-size:  2rem;
+    text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
+    margin-bottom: 2rem;
+    animation: moveBanner 1s 0.2s  forwards;
+    opacity: 0;
+}
+
+.banner button {
+    font-family: 'Mulish', sans-serif;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    background: #6a3093;
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to right, #a044ff, #6a3093);
+    padding: 1rem 3rem;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    animation: moveBanner 1s 0.3s forwards;
+    opacity: 0;
+}
+
+.banner button:hover {
+    opacity: 0.8;
+
+}
+
+@keyframes moveBanner {
+    0% {
+        transform: translateY(10rem) rotateY(-30deg);
+    }
+    100% {
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
+}
+
+
+
