--- a/style.css
+++ b/style.css
@@ -11,7 +11,83 @@ font-family: 'Mulish', sans-serif;
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
 }
+
+:root{
+    --font-primary: 'Baloo 2', cursive;
+    --font-secundary: 'Josefin Slab', serif;
+    --font-action: 'Mulish', sans-serif;   
+}
+
+.hamburguer {
+    width: 2rem;
+    height: 2rem;  
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;   
+}
+
+.show-menu .hamburguer{
+    right: 16rem;
+    transition: all 1.1s;
+}
+
+.line{
+    height: .1rem;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0.1rem 0.1rem 1px black ;
+    transition: transform 0.6s ;
+}
+
+.show-menu #line1{
+    transform: rotate(45deg) translate(.3rem, .25rem);
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3{
+    transform: rotate(-45deg) translate(.3rem, -.45rem);
+}
+
+.hamburguer span{
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#6a3093;
+    color: white;
+    font-family: var(--font-action);
+    opacity: 0;
+    
+}
+
+.hamburguer span::before{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid #6a3093;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+/*.show-menu .hamburguer:hover span {
+    opacity: 1;
+}*/
 
 header {
     width: 100%;
@@ -55,7 +131,7 @@ header {
     color: white;
     line-height: 3.5rem;
     font-size: 3.5rem;
-    font-family: 'Baloo 2', cursive;
+    font-family: var(--font-primary);
     font-weight: 300;
     text-shadow: .2rem .3rem 2px rgba(0, 0, 0, .4);
     margin-bottom: 2rem;
@@ -64,7 +140,7 @@ header {
 }
 
 .banner p {
-    font-family: 'Josefin Slab', serif;
+    font-family: var(--font-secundary);
     color: white;
     font-size:  2rem;
     text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
@@ -74,7 +150,7 @@ header {
 }
 
 .banner button {
-    font-family: 'Mulish', sans-serif;
+    font-family: var(--font-action);
     color: white;
     text-transform: uppercase;
     letter-spacing: .1rem;
@@ -89,11 +165,6 @@ header {
     opacity: 0;
 }
 
-.banner button:hover {
-    opacity: 0.8;
-
-}
-
 @keyframes moveBanner {
     0% {
         transform: translateY(10rem) rotateY(-30deg);
@@ -104,5 +175,68 @@ header {
     }
 }
 
+.sidebar {
+    width: 20rem;
+    height: 100vh;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all 1s;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
 
+.show-menu .sidebar {
+    right: 0;
+}
 
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50% );
+}
+
+.menu-item {
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.menu-link {
+    font-family: var(--font-action) ;
+    font-size: 2rem;
+    color: #555;
+    transition: color 0.5s
+}
+
+.menu-link:hover{
+    color: #a044ff;
+}
+
+.social-media{
+    
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content:space-evenly ;
+}
+
+.social-media i {
+    background-color: #6a3093;
+    color: rgb(255, 255, 255);
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: background-color 0.8s;
+}
+
+.social-media i:hover{
+    background-color: #a044ff;
+
+}
