--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ header {
     width: 80%;
     color: white;
     line-height: 3.5rem;
-    font-size: 3.5rem;
+    font-size: 4.0rem;
     font-family: var(--font-primary);
     font-weight: 300;
     text-shadow: .2rem .3rem 2px rgba(0, 0, 0, .4);
@@ -142,7 +142,7 @@ header {
 .banner p {
     font-family: var(--font-secundary);
     color: white;
-    font-size:  2rem;
+    font-size:  2.3rem;
     text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
     margin-bottom: 2rem;
     animation: moveBanner 1s 0.2s  forwards;
@@ -220,7 +220,7 @@ header {
     bottom: 2rem;
     width: 100%;
     display: flex;
-    justify-content:space-evenly ;
+    justify-content:space-evenly;
 }
 
 .social-media i {
@@ -238,5 +238,92 @@ header {
 
 .social-media i:hover{
     background-color: #a044ff;
+}
 
+.conhecimentos {
+    display: grid;
+    grid-template-columns: repeat(16, .5fr);
+    grid-template-rows: repeat(6, 6rem); 
+    row-gap: 0.5rem ;  
+}
+
+.conhecimento:nth-child(1){
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(2){
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(3){
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+}
+
+.conhecimento:nth-child(4){
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(5){
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(6){
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+}
+
+.sessao-conhecimentos{
+    background-color: #f5f5f5;
+    height: 100%;
+}
+
+.sessao-header {
+    display: flex;
+    align-items:center ;
+    justify-content: center;
+}
+
+.sessao-header h1 {
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: #555;
+    border-bottom: solid 3px #6a3093;
+    margin-bottom: 1.5rem;  
+}
+
+.conhecimento-header{
+    display: flex;
+    align-items: center;
+    color: #555;
+}
+
+.conhecimento-header i {
+    font-size: 2.5rem;
+}
+.conhecimento-header h3{
+    font-family: var(--font-secundary);
+    font-size: 2rem ;
+    padding-left: 1rem;
+}
+
+.conhecimento-text{
+    font-family: var(--font-secundary);
+    margin-top: 1rem;
+}
+
+.conhecimentos-img-wrap{
+    grid-column: 7 / 11;
+    grid-row: 2 / 6;
+    width: 80%;
+    height: 80%;
+}
+
+.conhecimentos-img-wrap img {
+    object-fit: cover;
+    height: 100%;
 }
